Open sun.management package for reflection - It prevents the Illegal reflective access warning in TimedMemberStateFactoryHelper