@@ -65,8 +65,12 @@
                         open java.base/sun.nio.ch
                     Operating system metrics related:
                         open jdk.management/com.sun.management.internal
-                    Avoid warnings caused by reflection in FilteringClassLoader:
+
+                    Avoid warnings caused by reflection in
+                    FilteringClassLoader:
                         open java.base/java.lang
+                    TimedMemberStateFactoryHelper:
+                        open java.management/sun.management
                      -->
                     <argLine>
                         ${vmHeapSettings}
@@ -76,6 +80,7 @@
                         --add-opens java.base/java.nio=com.hazelcast.core
                         --add-opens java.base/java.lang=com.hazelcast.core
                         --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
+                        --add-opens java.management/sun.management=com.hazelcast.core
                         --illegal-access=warn
                         -Dhazelcast.hidensity.check.freememory=false
                         -Dhazelcast.phone.home.enabled=false
