@@ -650,8 +650,12 @@
                                 open java.base/sun.nio.ch
                             Operating system metrics related:
                                 open jdk.management/com.sun.management.internal
-                            Avoid warnings caused by reflection in FilteringClassLoader:
+
+                            Avoid warnings caused by reflection in
+                            FilteringClassLoader:
                                 open java.base/java.lang
+                            TimedMemberStateFactoryHelper:
+                                open java.management/sun.management
 
                             Powermock issue workaround (https://github.com/powermock/powermock/issues/905):
                                 export java.xml/jdk.xml.internal
@@ -665,6 +669,7 @@
                                 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
                                 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                --add-opens java.management/sun.management=ALL-UNNAMED
                                 --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
                                 --illegal-access=warn
                                 -Dhazelcast.hidensity.check.freememory=false
